10/8/08 - moved list of rejected features to Unfuddle 804
9/8/08 - localize x-axis labels on graphs
> improve fonts
5/20/08 - replace Font with PhetFont
4/28/08 - add PhetLookAndFeel to main
1/7/08 - replace "Lucida Sans" with PhetDefaultFont
11/9/07 - move about.credits property to localization file
8/27/07 - replace "Lucida Sans" with PhetDefaultFont.getDefaultFontName()
# 1.01.00 (17033)
7/27/07 - new version published as part of new website deployment
7/2/07 - wrap the body of main in invokeLater
6/15/07 - convert description properties to well-formed HTML
4/7/07 - encapsulate PhetProjectConfig in OQCResources
4/5/07 - set locale in Spanish JNLP file via javaws.locale property
4/5/07 - convert from SimStrings to PhetProjectConfig
4/5/07 - consolidate all string constants in OQCStrings
3/20/07 - move TrigCache to phetcommon, convert to an instance instead of static methods
3/20/07 - rename packages that contained "enum" keyword, use "enums" instead
3/14/07 - rename SimStrings files to have basename opticalquantumcontrol_strings
3/14/07 - move images to data/opticalquantumcontrol/images to avoid namespace collisions
3/14/07 - get version and credits from properties file
3/12/07 - update JNLP files, thumbnail, ProGuard config
3/12/07 - update SimStrings files
3/12/07 - change "Shaper" class prefix to "OQC"
3/12/07 - rename package from "shaper" to "opticalquantumcontrol"
3/12/07 - rename project from "shaper" to "optical-quantum-control"
(11/29/06) - reformat description in SimStrings file to fit new About dialog
(7/12/06) - change codebase tag in JNLP files to work with PhET installer
(1/2/06) - changes to support new ModulePanel layout
(12/27/05) - changes to support phetcommon's new Module and Clock architecture
(12/14/05) - minor changes to support separation of phetcommon and phetgraphics into separate CVS projects
# 1.00.00
(11/8/05) - change Explanation image file from PNG to JPG format to reduce JAR size